fixed the overflow problem for long lines in the question and answer body

--- a/askbot/skins/default/media/style/style.css
+++ b/askbot/skins/default/media/style/style.css
@@ -106,11 +106,11 @@ pre {
     font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
     font-size: 100%;
     margin-bottom: 10px;
-    overflow: auto;
+    /*overflow: auto;*/
     background-color: #F5F5F5;
     padding-left: 5px;
     padding-top: 5px;
-    width: 671px;
+    /*width: 671px;*/
     padding-bottom: 20px ! ie7;
 }
 
@@ -845,6 +845,8 @@ a:hover.medal {
 .question-body, .answer-body {
     min-height: 39px;
     line-height: 20px;
+    overflow: auto;
+    width: 660px;
 }
 
 .question-body IMG, .answer-body IMG {
@@ -1204,6 +1206,7 @@ span.form-error {
     width: 691px;
     background-color: #F5F5F5;
     min-height: 20px;
+    overflow: auto;
 }
 
 .wmd-preview pre {
